# paper-terminal

./: .gitignore  paperterm.py  pyproject.toml
paperterm/: __init__.py  display_thread.py  shell_thread.py
